fix:swiper, flyout menu

--- a/shop.html
+++ b/shop.html
@@ -32,7 +32,7 @@
                         </button>
                     </div>
 
-
+                    <!-- logo、nav select -->
                     <div class="flex flex-1 items-center justify-center sm:justify-start gap-6">
                         <!-- logo -->
                         <div class="flex shrink-0 items-center">
@@ -42,10 +42,11 @@
                         <!-- nav select -->
                         <div class="hidden sm:ml-6 sm:flex sm:space-x-3">
 
-                            <div class="nav-btn flex justify-center items-center">
-                                <a href=""
-                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900 hover:bg-lightGray hover:text-subPurple active:bg-opacity-50 hover:rounded-md active:text-mainYellow">Booking
-                                    &nbsp;<i class="fa-solid fa-angle-down"></i></a>
+                            <div id="booking" class="cursor-pointer flex justify-center items-center">
+                                <p
+                                    class="inline-flex items-center px-3 py-2 text-sm text-gray-900 hover:bg-lightGray hover:text-subPurple hover:rounded-md">
+                                    Booking
+                                    &nbsp;<i class="fa-solid fa-angle-down"></i></p>
                             </div>
                             <div class="nav-btn flex justify-center items-center">
                                 <a href=""
@@ -100,7 +101,8 @@
             </div>
 
             <!-- Booking flyout menu-->
-            <div class="hidden sm:block absolute inset-x-0 top-0 -z-10 bg-white pt-16 shadow-lg ring-1 ring-gray-900/5">
+            <div id="flyoutMenu"
+                class="absolute inset-x-0 top-0 -z-10 bg-lightGray pt-14 shadow-lg ring-1 ring-gray-900/5">
                 <div
                     class="grid grid-cols-1 gap-2  py-6 sm:grid-cols-2 sm:gap-x-6 sm:gap-y-0 sm:py-10 lg:grid-cols-4 lg:gap-4 mx-auto max-w-6xl px-2 sm:px-6 lg:px-8">
                     <div class="relative -mx-3 flex gap-6 rounded-lg p-3 text-sm/6 sm:flex-col sm:p-6">
@@ -122,7 +124,8 @@
                         <!-- flyout menu-2 -->
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-3">
-                                <a href="" class="group">Sightseeing&nbsp;&nbsp;&nbsp;<span class="group-hover:ms-[5px]"><i
+                                <a href="" class="group">Sightseeing&nbsp;&nbsp;&nbsp;<span
+                                        class="group-hover:ms-[5px]"><i
                                             class="fa-solid fa-chevron-right"></i></span></i></a>
                             </h4>
                             <ul class="text-gray-600 font-mono">
@@ -137,7 +140,8 @@
                         <!-- flyout menu-3 -->
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-3">
-                                <a href="" class="group">Outdoor Sports&nbsp;&nbsp;&nbsp;<span class="group-hover:ms-[5px]"><i
+                                <a href="" class="group">Outdoor Sports&nbsp;&nbsp;&nbsp;<span
+                                        class="group-hover:ms-[5px]"><i
                                             class="fa-solid fa-chevron-right"></i></span></i></a>
                             </h4>
                             <ul class="text-gray-600 font-mono">
@@ -175,50 +179,58 @@
 
                 <!-- swiper-1-area -->
                 <div
-                    class="swiper-slide w-full h-full bg-swiper-1-sm md:bg-swiper-1 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-10 lg:p-14">
-                    <div
+                    class="swiper-slide w-full h-full bg-swiper-1-sm md:bg-swiper-1 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-14 lg:p-20">
+                    <h2
                         class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-3 md:mb-5 lg:mb-8 relative">
                         Kirkjufell
-                        <span><img src="./src/img/logo.png"
-                                class="h-[20px] md:h-[35px] lg:h-[50px] absolute top-2 lg:top-3 right-0" alt=""></span>
-                    </div>
-                    <div class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow md:mb-52 lg:mb-64">Hiking
-                    </div>
-                    <div class="invisible md:visible md:text-lg row-span-6 lg:text-2xl text-lightGray">Known as the
-                        "photographer's paradise".</div>
+                    </h2>
+                    <h2 class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-8 md:mb-44 lg:mb-52">
+                        Hiking
+                    </h2>
+                    <p class="invisible md:visible md:text-lg lg:text-2xl text-lightGray">Known as the
+                        "photographer's paradise".</p>
+                    <p class="visible text-sm sm:invisible text-lightGray mb-2">Known as the
+                    </p>
+                    <p class="visible text-sm sm:invisible text-lightGray">"photographer's paradise".</p>
                 </div>
 
                 <!-- swiper-2-area -->
                 <div
-                    class="swiper-slide w-full h-full bg-swiper-2-sm md:bg-swiper-2 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-10 lg:p-14">
-                    <div
+                    class="swiper-slide w-full h-full bg-swiper-2-sm md:bg-swiper-2 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-14 lg:p-20">
+                    <h2
                         class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-3 md:mb-5 lg:mb-8 relative">
                         Gullfoss
-                        <span><img src="./src/img/logo.png"
-                                class="h-[20px] md:h-[35px] lg:h-[50px] absolute top-2 lg:top-3 right-0" alt=""></span>
-                    </div>
-                    <div class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow md:mb-52 lg:mb-64">Falls
-                    </div>
-
-
-                    <div class="invisible md:visible md:text-lg row-span-6 lg:text-2xl text-lightGray">known as Golden
-                        Falls, the breathtaking waterfalls.</div>
+                    </h2>
+                    <h2 class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-8 md:mb-44 lg:mb-52">
+                        Falls
+                    </h2>
+                    <p class="invisible md:visible md:text-lg lg:text-2xl text-lightGray">known as the Golden
+                        Falls, the breathtaking waterfalls.</p>
+                    <p class="visible text-sm sm:invisible text-lightGray mb-2">known as the Golden
+                        Falls,
+                    </p>
+                    <p class="visible text-sm sm:invisible text-lightGray">the breathtaking waterfalls.</p>
                 </div>
+
 
                 <!-- swiper-3-area -->
                 <div
-                    class="swiper-slide w-full h-full bg-swiper-3-sm md:bg-swiper-3 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-10 lg:p-14">
-                    <div
+                    class="swiper-slide w-full h-full bg-swiper-2-sm md:bg-swiper-2 bg-cover bg-no-repeat grid grid-row-12 p-8 md:p-14 lg:p-20">
+                    <h2
                         class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-3 md:mb-5 lg:mb-8 relative">
                         Námafjall
-                        <span><img src="./src/img/logo.png"
-                                class="h-[20px] md:h-[35px] lg:h-[50px] absolute top-2 lg:top-3 right-0" alt=""></span>
-                    </div>
-                    <div class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow md:mb-52 lg:mb-64">Geotherm
-                    </div>
-                    <div class="invisible md:visible md:text-lg row-span-6 lg:text-2xl text-lightGray">Be characterized
-                        by sulfuric fumaroles and mud pools.</div>
+                    </h2>
+                    <h2 class="text-3xl md:text-5xl row-span-6 lg:text-7xl text-mainYellow mb-8 md:mb-44 lg:mb-52">
+                        Geotherm
+                    </h2>
+                    <p class="invisible md:visible md:text-lg lg:text-2xl text-lightGray">Be characterized
+                        by sulfuric fumaroles and mud pools.</p>
+                    <p class="visible text-sm sm:invisible text-lightGray mb-2">Be characterized
+                        by the
+                    </p>
+                    <p class="visible text-sm sm:invisible text-lightGray">sulfuric fumaroles and mud pools.</p>
                 </div>
+
             </div>
         </section>
     </header>
@@ -238,14 +250,15 @@
             }
         })
 
-        let swiper = new Swiper(".bannerSwiper", {
+        const swiper = new Swiper(".bannerSwiper", {
             slidesPerView: 1,
             spaceBetween: 0,
-            speed: 900,
+            speed: 1000,
             autoplay: {
-                delay: 2500,
+                delay: 2800,
                 disableOnInteraction: true,
             },
+            loop: true,
         });
 
         //滑鼠移入：暫停輪播
@@ -257,6 +270,26 @@
         // document.querySelector('.bannerSwiper').addEventListener('mouseleave', function () {
         //     swiper.autoplay.start();
         // });
+
+        //'Booking':hover -> 展開flyout menu
+        const bookingBtn = document.querySelector('#booking');
+        const flyoutMenu = document.querySelector('#flyoutMenu');
+        flyoutMenu.style.display = 'none';
+
+        function showOrHide(result) {
+            flyoutMenu.style.display = result ? 'block' : 'none';
+        }
+
+        [bookingBtn, flyoutMenu].forEach(element => {
+            element.addEventListener('mouseover', function () { showOrHide(true) });
+            // element.addEventListener('mouseout', function () { showOrHide(false) });
+
+        });
+
+        flyoutMenu.addEventListener('mouseout', function () { showOrHide(false) });
+
+
+
     </script>
 </body>
 
