--- a/shop.html
+++ b/shop.html
@@ -88,13 +88,13 @@
 
             <!-- Mobile ham menu -->
             <div class="sm:hidden" id="mobile-menu">
-                <div class="space-y-1 pb-5 bg-lightGray max-h-80 overflow-y-auto">
+                <div class="space-y-1 pb-5 bg-lightGray">
 
                     <p id="accordionBtn"
                         class="block cursor-pointer border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 ps-3 pe-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">
                         Booking&nbsp;&nbsp;<span id="plusIcon"><i class="fa-solid fa-plus"></i></span></p>
 
-                    <div id="accordionContext" class="hidden ps-8 py-2">
+                    <div id="accordionContext" class="hidden ps-8 py-2 max-h-72 overflow-y-auto">
                         <!-- ham menu - Accordion 1 -->
                         <h4 class="text-subPurple mb-3">
                             <a href="" class="group">Hiking</a>
