--- a/shop.html
+++ b/shop.html
@@ -88,14 +88,14 @@
 
             <!-- Mobile ham menu -->
             <div class="sm:hidden" id="mobile-menu">
-                <div class="space-y-1 pb-5 bg-lightGray max-h-screen overflow-y-auto">
+                <div class="space-y-1 pb-5 bg-lightGray">
 
                     <p id="accordionBtn"
                         class="block cursor-pointer border-l-4 hover:border-mainYellow hover:bg-gray-50 py-2 ps-3 pe-4 text-gray-800 font-medium hover:text-subPurple active:opacity-60">
                         Booking&nbsp;&nbsp;<span id="plusIcon"><i class="fa-solid fa-plus"></i></span></p>
 
                     <!-- ham menu accordion all -->
-                    <div id="accordionContext" class="hidden ps-8 py-2 max-h-full overflow-y-auto">
+                    <div id="accordionContext" class="hidden ps-8 py-2 max-h-80 overflow-y-auto">
                         <!-- ham menu - accordion 1 -->
                         <h4 class="text-subPurple mb-3">
                             <a href="" class="group">Hiking</a>
@@ -136,7 +136,7 @@
                             <li class="hover:text-subPurple mb-2"><a href="">Reykjavík Culture Night</a></li>
                             <li class="hover:text-subPurple mb-2"><a href="">Iceland Airwaves</a></li>
                             <li class="hover:text-subPurple mb-2"><a href="">The Great Fish Day</a></li>
-                            <li class="hover:text-subPurple mb-6"><a href="">Winter Lights Festival</a></li>
+                            <li class="hover:text-subPurple"><a href="">Winter Lights Festival</a></li>
                         </ul>
 
                     </div>
