--- a/shop.html
+++ b/shop.html
@@ -299,40 +299,63 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-        //nav 點開漢堡標選單
+
+        // nav 點開漢堡標選單
         const hamBtn = document.querySelector('#hamBtn');
-        const mobileMenu = document.querySelector('#mobile-menu');
-        const navBar = document.querySelector('#navBar')
+        const hamMenu = document.querySelector('#mobile-menu');
+        const navBar = document.querySelector('#navBar');
 
-        mobileMenu.style.display = 'none';
-
-        hamBtn.addEventListener('click', function () {
-            navBar.classList.remove('bg-white/50');
-            navBar.classList.add('bg-lightGray');
-
-            if (mobileMenu.style.display === 'none') {
-                mobileMenu.style.display = 'block';
-            } else if (mobileMenu.style.display === 'block') {
-                mobileMenu.style.display = 'none';
-            }
-        });
-
-        // ham-menu accordion 手風琴
+        // ham 手風琴變數
         const accordionBtn = document.querySelector('#accordionBtn');
         const accordionContext = document.querySelector('#accordionContext');
         const plusIcon = document.querySelector('#plusIcon');
         const plus = `<i class="fa-solid fa-plus"></i>`;
         const minus = `<i class="fa-solid fa-minus"></i>`;
 
-        accordionBtn.addEventListener('click', function () {
-            function showAccordion(result) {
-                accordionContext.style.display = result ? 'block' : 'none';
+        hamMenu.style.display = 'none';
+
+        function showAccordion(result) {
+            accordionContext.style.display = result ? 'block' : 'none';
+        }
+
+        // 點擊視窗空白處，關掉ham menu
+        window.onclick = function hideDropdown() {
+            hamMenu.style.display = 'none';
+        }
+
+        // 防止ham menu事件冒泡（不要吃到 window.onclick 效果）
+        hamMenu.addEventListener('click', (e) => {
+            e.stopPropagation();
+        })
+
+        hamBtn.addEventListener('click', function () {
+            navBar.classList.remove('bg-white/50');
+            navBar.classList.add('bg-lightGray');
+            // 防止ham btn事件冒泡（不要吃到 window.onclick 效果）
+            event.stopPropagation();
+
+            function showHamMenu(result) {
+                hamMenu.style.display = result ? 'block' : 'none';
             }
+
+            if (hamMenu.style.display === 'none') {
+                showHamMenu(true);
+                showAccordion(false);
+                plusIcon.innerHTML = plus;
+            } else if (hamMenu.style.display === 'block') {
+                showHamMenu(false);
+            }
+        });
+
+        // ham-menu accordion 手風琴
+        accordionBtn.addEventListener('click', function () {
+            accordionContext.scrollTop = 0;
 
             if (accordionContext.style.display === 'none' || accordionContext.style.display === '') {
                 // 收起 -> 展開
                 showAccordion(true);
                 plusIcon.innerHTML = minus;
+                accordionContext.scrollTop = 0;
             } else {
                 // 展開 -> 收起
                 showAccordion(false);
